--- a/SogdianMerchant/wwwroot/index.html
+++ b/SogdianMerchant/wwwroot/index.html
@@ -7,8 +7,8 @@
     <title>SogdianMerchant</title>
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="SogdianMerchant.styles.css" rel="stylesheet" /> -->
+    <!-- If you add any scoped CSS files, uncomment the following to load them -->
+    <link href="SogdianMerchant.styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -26,6 +26,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
 </body>
 
 </html>
